--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Mini App</title>
+  <title>My test</title>
 </head>
 <body>
   <h1>Добро пожаловать в Mini App!</h1>
