--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My test</title>
+  <title>My Mini App</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
   <h1>Добро пожаловать в Mini App!</h1>
   <p id="user"></p>
-
-  <script>
-    const tg = window.Telegram.WebApp;
-    tg.expand(); // Разворачивает Web App на весь экран
-
-    document.getElementById("user").innerText = 
-      `Привет, ${tg.initDataUnsafe.user?.first_name || "гость"}!`;
-  </script>
 </body>
 </html>
