--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-  <h1>Добро пожаловать в Mini App!</h1>
-  <p id="user"></p>
+  <!-- Загрузочный экран -->
+  <div id="loader" class="loader-wrapper">
+    <div class="spinner"></div>
+  </div>
+
+  <!-- Основной контент -->
+  <div id="content" class="hidden">
+    <h1>Добро пожаловать!</h1>
+    <p id="user"></p>
+  </div>
 
   <script src="script.js"></script>
 </body>
