--- a/index.html
+++ b/index.html
@@ -7,16 +7,8 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-  <!-- Загрузочный экран -->
-  <div id="loader" class="loader-wrapper">
-    <div class="spinner"></div>
-  </div>
-
-  <!-- Основной контент -->
-  <div id="content" class="hidden">
-    <h1>Добро пожаловать!</h1>
-    <p id="user"></p>
-  </div>
+  <h1>Добро пожаловать в Mini App!</h1>
+  <p id="user"></p>
 
   <script src="script.js"></script>
 </body>
