--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>My Mini App</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tanga Mini App</title>
+  <link rel="stylesheet" href="style.css" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-  <h1>Добро пожаловать в Mini App!</h1>
-  <p id="user"></p>
+  <div class="container" id="main-screen">
+    <div class="header">
+      <div class="user-id" id="user-id">Загрузка ID...</div>
+      <img id="user-avatar" class="avatar" src="" alt="Avatar" style="display:none" />
+    </div>
 
-  <script src="script.js"></script>
+    <div class="logo">T</div>
+    <button class="about-btn" onclick="openTangaInfo()">Что такое Танга?</button>
+
+    <div class="balance-block">
+      <div class="balance-title">Общий баланс</div>
+      <div class="balance-value" id="balance-value">0</div>
+    </div>
+
+    <div class="actions">
+      <button onclick="navigateTo('tasks')">Незавершённые задачи</button>
+      <button onclick="navigateTo('mining')">Майнинг</button>
+    </div>
+  </div>
+
+  <div class="container" id="mining-screen" style="display:none">
+    <h2>Майнинг</h2>
+    <!-- Здесь позже появится функционал майнинга -->
+  </div>
+
+  <div class="container" id="tasks-screen" style="display:none">
+    <h2>Незавершённые задачи</h2>
+    <!-- Здесь позже появятся задачи -->
+  </div>
+
+  <div class="nav">
+    <button id="nav-home" class="active" onclick="showScreen('main')">Главная</button>
+    <button id="nav-tasks" onclick="showScreen('tasks')">Задания</button>
+    <button id="nav-mining" onclick="showScreen('mining')">Майнинг</button>
+  </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
