--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container" id="main-screen">
     <div class="header" onclick="navigateTo('profile')">
-      <img id="user-avatar" class="avatar bordered" src="" alt="Avatar" />
+      <img id="user-avatar" class="avatar" src="" alt="Avatar" />
     </div>
 
     <div class="logo">A</div>
