--- a/index.html
+++ b/index.html
@@ -3,49 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Akmal</title>
+  <title>Tanga Mini App</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-  <div class="container" id="main-screen">
-    <div class="header" onclick="navigateTo('profile')">
-      <img id="user-avatar" class="avatar" src="" alt="Avatar" />
-    </div>
-    <div class="logo">A</div>
-    <button class="about-btn bordered" onclick="openTangaInfo()">Что такое Akmal Click?</button>
-    <div class="content-section">
-      <div class="balance-block">
-        <div class="balance-title">Общий баланс</div>
-        <div class="balance-value" id="balance-value">0</div>
+  <div id="app">
+    <div id="main-screen" class="screen active">
+      <header>
+        <div id="user-info" onclick="openProfile()"></div>
+        <div></div> <!-- правая часть убрана -->
+      </header>
+
+      <div class="logo">T</div>
+      <button class="btn-info" onclick="location.href='https://t.me/akmalminiappbot'">Что такое Танга?</button>
+
+      <div class="balance-section">
+        <div>Общий баланс</div>
+        <div class="balance-amount" id="balance"></div>
       </div>
 
       <div class="actions">
-        <button onclick="navigateTo('tasks')">Незавершённые задачи</button>
-        <button onclick="navigateTo('mining')">Майнинг</button>
+        <div class="action-btn" onclick="openMining()">✨ Майнинг</div>
+      </div>
+
+      <div id="task-reminder" class="tasks-bar" onclick="openTasks()">
+        <div>Незавершенные задачи</div>
+        <div class="notif" id="task-count">+1</div>
       </div>
     </div>
-  </div>
-  <div class="container" id="mining-screen" style="display:none">
-    <h2>Майнинг</h2>
-  </div>
 
-  <div class="container" id="tasks-screen" style="display:none">
-    <h2>Незавершённые задачи</h2>
-  </div>
+    <div id="mining-screen" class="screen">
+      <h2>Майнинг</h2>
+      <div id="mining-area">
+        <div id="mining-icon" onclick="mine()">⛏️</div>
+      </div>
+    </div>
 
-  <div class="container" id="profile-screen" style="display:none">
-    <h2>Профиль</h2>
-    <!-- Здесь позже появится профиль пользователя -->
-  </div>
+    <div id="tasks-screen" class="screen">
+      <h2>Задания</h2>
+      <div class="task">
+        <div class="task-info">
+          <h3>Подписаться на канал</h3>
+          <p>Награда: <strong>1000 баллов</strong></p>
+        </div>
+        <div class="task-actions">
+          <button onclick="subscribeTask()">Перейти</button>
+          <button onclick="checkSubscription()">Проверить</button>
+        </div>
+      </div>
+      <div id="task-result"></div>
+    </div>
 
-  <div class="nav">
-    <button id="nav-home" class="active" onclick="showScreen('main')">Главная</button>
-    <button id="nav-tasks" onclick="showScreen('tasks')">Задания</button>
-    <button id="nav-mining" onclick="showScreen('mining')">Майнинг</button>
-    <button id="nav-profile" onclick="showScreen('profile')">Профиль</button>
-  </div>
+    <div id="leaderboard-screen" class="screen">
+      <h2>Таблица лидеров</h2>
+      <ul id="leaderboard-list"></ul>
+      <div id="user-rank">Ваше место: —</div>
+    </div>
 
+    <div id="profile-screen" class="screen">
+      <h2>Профиль</h2>
+      <!-- профиль будет позже -->
+    </div>
+
+    <footer>
+      <div class="nav-item active" onclick="navigate('main-screen', this)">🏠<br>Главная</div>
+      <div class="nav-item" onclick="navigate('tasks-screen', this)">📄<br>Задания</div>
+      <div class="nav-item" onclick="navigate('mining-screen', this)">✨<br>Майнинг</div>
+      <div class="nav-item" onclick="navigate('leaderboard-screen', this)">📊<br>Таблица</div>
+      <div class="nav-item" onclick="navigate('profile-screen', this)">👤<br>Профиль</div>
+    </footer>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
