--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div></div> <!-- правая часть убрана -->
       </header>
 
-      <div class="logo">T</div>
-      <button class="btn-info" onclick="location.href='https://t.me/akmalminiappbot'">Что такое Танга?</button>
+      <div class="logo">A</div>
+      <button class="btn-info" onclick="location.href='https://t.me/akmalminiappbot'">Что такое Akmal Click?</button>
 
       <div class="balance-section">
         <div>Общий баланс</div>
